[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2021"
license = "AGPL-3.0-only"
name = "docstore"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-std = {version = "1.12", features = ["attributes"]}
async-trait = "0.1"
bytes = "1.4"
chrono = "0.4"
libipld = "0.16"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_cbor = "0.11"
wnfs = "0.1"
