[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2021"
license = "AGPL-3.0-only"
name = "docstore"
version = "0.1.0"

[dependencies]
async-std = {version = "1.12", features = ["attributes"]}
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.4"
chrono = "0.4"
futures = "0.3"
libipld = "0.16"
log = "0.4"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_cbor = "0.11"
thiserror = "1.0"
wnfs = "0.1"
