[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2021"
license = "AGPL-3.0-only"
name = "docstore"
version = "0.1.0"

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.4"
chrono = "0.4"
env_logger = "0.10"
futures = "0.3"
image = "0.24"
libipld = "0.16"
log = "0.4"
mime_guess = "2.0"
rand = "0.8"
rusqlite = {version = "0.29", features = ["chrono"]}
secular = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_cbor = "0.11"
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1.33", features = ["fs", "macros", "rt", "rt-multi-thread"]}
tokio-util = {version = "0.7", features = ["compat"]}
wnfs = "0.1"
